# monopoly

./: .clang-format  .clang-tidy  .clangd  .gitignore  Cargo.toml  board.cpp  board.hpp  commands.md  controller.cpp  controller.hpp  display.cpp  display.hpp  game.cpp  main.cpp  meson.build  player.cpp  player.hpp  view.cpp  view.hpp
data/: classic_board.json  json_validator.cpp  json_validator.hpp
src/: board.rs  board_tile_data.json  colors.rs  colour.rs  colours.rs  constants.rs  display.rs  error.rs  game.rs  interface.rs  main  main.cpp  main.rs  oldcode  player.rs  property_data.json  roll  temp_board.rs  tile.rs
src/board_tiles/: go.rs  mod.rs  railroad.rs  street.rs  tile.rs
src/controller/: controller.cpp  controller.hpp  exit_codes.hpp  game.cpp
src/model/: board.cpp  board.hpp  board_config.cpp  player.cpp  player.hpp
src/model/players/: player.cpp  player.hpp  token.hpp
src/model/tiles/: attributes.hpp  corner.cpp  corner.hpp  event.cpp  event.hpp  property.cpp  street.cpp  street.hpp  tile.cpp  tile.hpp
src/tiles/: board_tile.rs  board_tile_data.json  event_tile.rs  mod.rs  railroad_tile.rs  street_tile.rs  utility_tile.rs
src/utils/: color.hpp  map.hpp  sorting.hpp  substrings.hpp
src/view/: board_display.cpp  components.hpp  view.cpp  view.hpp
tiles/: board_data.json  corner.cpp  corner.hpp  street.cpp  street.hpp  tile.hpp  tile_attributes.hpp
tiles/property/: railroad.cpp  railroad.hpp  utility.cpp  utility.hpp
utils/: color.hpp  component.hpp  map.hpp  sorting.hpp  substrings.hpp
